// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Metric Alert With Defaults renders an Azure Metric Alert with defaults and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_monitor_metric_alert.testAzureQueryRuleAlert_metricAlert_7716E17C.id}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_monitor_metric_alert": {
      "testAzureQueryRuleAlert_metricAlert_7716E17C": {
        "auto_mitigate": true,
        "criteria": [
          {
            "aggregation": "Average",
            "metric_name": "Heartbeat",
            "metric_namespace": "Microsoft.operationalinsights/workspaces",
            "operator": "LessThan",
            "skip_metric_validation": false,
            "threshold": 0
          }
        ],
        "enabled": true,
        "frequency": "PT5M",
        "name": "metric alert test",
        "resource_group_name": "\${azurerm_resource_group.MyResourceGroup.name}",
        "scopes": [
          "/subscriptions/00000000-0000-0000-0000-000000000000"
        ],
        "severity": 3,
        "window_size": "PT5M"
      }
    },
    "azurerm_resource_group": {
      "MyResourceGroup": {
        "location": "eastus",
        "name": "rg-test"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0"
      }
    }
  }
}"
`;

exports[`Linux Metric Alert Example renders the Metric Alert and checks snapshot 1`] = `
{
  "output": {
    "id": {
      "value": "\${azurerm_monitor_metric_alert.metricAlert2_metricAlert_802BFA32.id}",
    },
  },
  "provider": {
    "azurerm": [
      {
        "features": {
          "resource_group": {
            "prevent_deletion_if_contains_resources": true,
          },
        },
      },
    ],
  },
  "resource": {
    "azurerm_log_analytics_workspace": {
      "la": {
        "location": "eastus",
        "name": "la-\${var.name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
      },
    },
    "azurerm_monitor_metric_alert": {
      "metricAlert1_metricAlert_313578D4": {
        "auto_mitigate": true,
        "criteria": [
          {
            "aggregation": "Average",
            "dimension": [
              {
                "name": "OSType",
                "operator": "Include",
                "values": [
                  "*",
                ],
              },
              {
                "name": "Version",
                "operator": "Include",
                "values": [
                  "*",
                ],
              },
            ],
            "metric_name": "Heartbeat",
            "metric_namespace": "Microsoft.operationalinsights/workspaces",
            "operator": "LessThan",
            "skip_metric_validation": false,
            "threshold": 0,
          },
        ],
        "enabled": true,
        "frequency": "PT5M",
        "name": "metricalert1-\${var.name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "scopes": [
          "\${azurerm_log_analytics_workspace.la.id}",
        ],
        "severity": 3,
        "window_size": "PT5M",
      },
      "metricAlert2_metricAlert_802BFA32": {
        "auto_mitigate": true,
        "criteria": [
          {
            "aggregation": "Average",
            "metric_name": "Heartbeat",
            "metric_namespace": "Microsoft.operationalinsights/workspaces",
            "operator": "LessThan",
            "skip_metric_validation": false,
            "threshold": 0,
          },
        ],
        "enabled": true,
        "frequency": "PT5M",
        "name": "metricalert2-\${var.name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "scopes": [
          "\${azurerm_log_analytics_workspace.la.id}",
        ],
        "severity": 3,
        "window_size": "PT5M",
      },
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-\${var.name}",
        "tags": {
          "environment": "dev",
          "service_name": "tf-test",
          "service_owner": "dev",
        },
      },
    },
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0",
      },
    },
  },
  "variable": {
    "name": {
      "default": "test",
      "description": "System name used to randomize the resources",
      "type": "string",
    },
  },
}
`;
